# trusted-agentic-commerce-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md
examples/: voice_assistant_travel.json
schema/2025-08-21/: schema.json  schema.ts
schema/2025-08-27/: schema.json  schema.ts
schema/2025-11-12/: schema.json  schema.ts
sdk/javascript/: .prettierignore  README.md  eslint.config.js  index.js  package-lock.json  package.json  recipient.js  sender.js  test.js  utils.js  version.js
sdk/javascript/cli/: tacp-receive.js  tacp-send.js
sdk/javascript/src/: errors.js  index.js  recipient.js  sender.js  utils.js  version.js
sdk/javascript/tests/: cache.test.js  crypto.test.js  errors.test.js  integration.test.js  network.test.js  recipient.test.js  sender.test.js  test-runner.js  utils.test.js
sdk/python/: .flake8  Makefile  README.md  __init__.py  pyproject.toml  recipient.py  requirements-dev.txt  requirements.txt  sender.py  setup.py  test.py  utils.py  version.py
sdk/python/cli/: __init__.py  tacp_receive.py  tacp_send.py
sdk/python/src/: __init__.py  errors.py  recipient.py  sender.py  utils.py  version.py
sdk/python/tests/: test_cache.py  test_crypto.py  test_errors.py  test_integration.py  test_network.py  test_recipient.py  test_runner.py  test_sender.py  test_utils.py
sdk/typescript/: .prettierignore  README.md  eslint.config.js  index.ts  package-lock.json  package.json  recipient.ts  sdk-types.ts  sender.ts  test.ts  tsconfig.json  utils.ts  version.ts
sdk/typescript/cli/: tacp-receive.ts  tacp-send.ts
sdk/typescript/src/: errors.ts  index.ts  recipient.ts  sdk-types.ts  sender.ts  utils.ts  version.ts
sdk/typescript/tests/: cache.test.ts  crypto.test.ts  errors.test.ts  integration.test.ts  network.test.ts  recipient.test.ts  sender.test.ts  test-runner.ts  utils.test.ts
